🔧 Fix Scrollbar
Fix horizontal scrollbar with overflow-x : hidden for body

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -32,6 +32,7 @@ body {
     font-family: "Josefin Sans", sans-serif;
     background: var(--clr-background);
     color: antiquewhite;   
+    overflow-x: hidden;
   }
   main{
     display: block;
